1、新增task完成后的回调

--- a/threadPoollibrary/build.gradle
+++ b/threadPoollibrary/build.gradle
@@ -26,6 +26,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        buildConfig true
+        aidl(true)
+    }
+
 }
 
 dependencies {
